@@ -1,16 +1,16 @@
 package org.eclipse.paho.mqttv5.client.internal;
 
 /*******************************************************************************
- * Copyright (c) 2009, 2016 IBM Corp.
+ * Copyright (c) 2009, 2018 IBM Corp.
  *
  * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * are made available under the terms of the Eclipse Public License v2.0
  * and Eclipse Distribution License v1.0 which accompany this distribution.
  *
  * The Eclipse Public License is available at
- *    http://www.eclipse.org/legal/epl-v10.html
+ *    https://www.eclipse.org/legal/epl-2.0
  * and the Eclipse Distribution License is available at
- *   http://www.eclipse.org/org/documents/edl-v10.php.
+ *   https://www.eclipse.org/org/documents/edl-v10.php
  *
  * Contributors:
  *    Dave Locke - initial API and implementation and/or initial documentation
@@ -23,7 +23,6 @@ import java.util.Enumeration;
 import java.util.Properties;
 import java.util.Vector;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.TimeUnit;
 
 import org.eclipse.paho.mqttv5.client.BufferedMessage;
 import org.eclipse.paho.mqttv5.client.IMqttMessageListener;
@@ -33,12 +32,10 @@ import org.eclipse.paho.mqttv5.client.MqttClientException;
 import org.eclipse.paho.mqttv5.client.MqttClientInterface;
 import org.eclipse.paho.mqttv5.client.MqttClientPersistence;
 import org.eclipse.paho.mqttv5.client.MqttConnectionOptions;
-import org.eclipse.paho.mqttv5.client.MqttDeliveryToken;
 import org.eclipse.paho.mqttv5.client.MqttPingSender;
 import org.eclipse.paho.mqttv5.client.MqttToken;
 import org.eclipse.paho.mqttv5.client.MqttTopic;
 import org.eclipse.paho.mqttv5.client.TimerPingSender;
-import org.eclipse.paho.mqttv5.client.alpha.IMqttAsyncClient;
 import org.eclipse.paho.mqttv5.client.logging.Logger;
 import org.eclipse.paho.mqttv5.client.logging.LoggerFactory;
 import org.eclipse.paho.mqttv5.common.MqttException;
@@ -59,7 +56,7 @@ public class ClientComms {
 	public static String VERSION = "${project.version}";
 	public static String BUILD_LEVEL = "L${build.level}";
 	private static final String CLASS_NAME = ClientComms.class.getName();
-	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT, CLASS_NAME);
+	private Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT, CLASS_NAME);
 
 	private static final byte CONNECTED = 0;
 	private static final byte CONNECTING = 1;
@@ -81,7 +78,7 @@ public class ClientComms {
 	private boolean stoppingComms = false;
 
 	private byte conState = DISCONNECTED;
-	private Object conLock = new Object(); // Used to synchronize connection state
+	private final Object conLock = new Object(); // Used to synchronize connection state
 	private boolean closePending = false;
 	private boolean resting = false;
 	private DisconnectedMessageBuffer disconnectedMessageBuffer;
@@ -93,7 +90,7 @@ public class ClientComms {
 	 * network calls.
 	 *
 	 * @param client
-	 *            The {@link IMqttAsyncClient}
+	 *            The {@link MqttClientInterface}
 	 * @param persistence
 	 *            the {@link MqttClientPersistence} layer.
 	 * @param pingSender
@@ -129,22 +126,6 @@ public class ClientComms {
 		return receiver;
 	}
 
-	private void shutdownExecutorService() {
-		String methodName = "shutdownExecutorService";
-		executorService.shutdown();
-		try {
-			if (!executorService.awaitTermination(1, TimeUnit.SECONDS)) {
-				executorService.shutdownNow();
-				if (!executorService.awaitTermination(1, TimeUnit.SECONDS)) {
-					log.fine(CLASS_NAME, methodName, "executorService did not terminate");
-				}
-			}
-		} catch (InterruptedException ie) {
-			executorService.shutdownNow();
-			Thread.currentThread().interrupt();
-		}
-	}
-
 	/**
 	 * Sends a message to the server. Does not check if connected this validation
 	 * must be done by invoking routines.
@@ -173,6 +154,7 @@ public class ClientComms {
 			// Persist if needed and send the message
 			this.clientState.send(message, token);
 		} catch (MqttException e) {
+			token.internalTok.setClient(null); // undo client setting on error
 			if (message instanceof MqttPublish) {
 				this.clientState.undo((MqttPublish) message);
 			}
@@ -193,8 +175,10 @@ public class ClientComms {
 	 */
 	public void sendNoWait(MqttWireMessage message, MqttToken token) throws MqttException {
 		final String methodName = "sendNoWait";
+
 		if (isConnected() || (!isConnected() && message instanceof MqttConnect)
 				|| (isDisconnecting() && message instanceof MqttDisconnect)) {
+
 			if (disconnectedMessageBuffer != null && disconnectedMessageBuffer.getMessageCount() != 0) {
 				// @TRACE 507=Client Connected, Offline Buffer available, but not empty. Adding
 				// message to buffer. message={0}
@@ -209,6 +193,7 @@ public class ClientComms {
 					this.clientState.persistBufferedMessage(message);
 				}
 				disconnectedMessageBuffer.putMessage(message, token);
+
 			} else {
 
 				if (message instanceof MqttPublish) {
@@ -278,7 +263,8 @@ public class ClientComms {
 				}
 
 				conState = CLOSED;
-				shutdownExecutorService();
+				// Don't shut down an externally supplied executor service 
+				//shutdownExecutorService();
 				// ShutdownConnection has already cleaned most things
 				clientState.close();
 				clientState = null;
@@ -348,7 +334,7 @@ public class ClientComms {
 				conbg.start();
 			} else {
 				// @TRACE 207=connect failed: not disconnected {0}
-				log.fine(CLASS_NAME, methodName, "207", new Object[] { new Byte(conState) });
+				log.fine(CLASS_NAME, methodName, "207", new Object[] { Byte.valueOf(conState) });
 				if (isClosed() || closePending) {
 					throw new MqttException(MqttClientException.REASON_CODE_CLIENT_CLOSED);
 				} else if (isConnecting()) {
@@ -377,7 +363,7 @@ public class ClientComms {
 		}
 
 		// @TRACE 204=connect failed: rc={0}
-		log.fine(CLASS_NAME, methodName, "204", new Object[] { new Integer(rc) });
+		log.fine(CLASS_NAME, methodName, "204", new Object[] { Integer.valueOf(rc) });
 		throw mex;
 	}
 
@@ -494,7 +480,7 @@ public class ClientComms {
 		// it now. This is done at the end to allow a new connect
 		// to be processed and now throw a currently disconnecting error.
 		// any outstanding tokens and unblock any waiters
-		if (endToken != null & callback != null) {
+		if (endToken != null && callback != null) {
 			callback.asyncOperationComplete(endToken);
 		}
 		if (wasConnected && callback != null) {
@@ -710,7 +696,7 @@ public class ClientComms {
 		this.networkModules = networkModules;
 	}
 
-	public MqttDeliveryToken[] getPendingDeliveryTokens() {
+	public MqttToken[] getPendingTokens() {
 		return tokenStore.getOutstandingDelTokens();
 	}
 
@@ -740,10 +726,10 @@ public class ClientComms {
 
 	public Properties getDebug() {
 		Properties props = new Properties();
-		props.put("conState", new Integer(conState));
+		props.put("conState", Integer.valueOf(conState));
 		props.put("serverURI", getClient().getServerURI());
 		props.put("callback", callback);
-		props.put("stoppingComms", new Boolean(stoppingComms));
+		props.put("stoppingComms", Boolean.valueOf(stoppingComms));
 		return props;
 	}
 
@@ -764,7 +750,11 @@ public class ClientComms {
 		}
 
 		void start() {
-			executorService.execute(this);
+			if (executorService == null) {
+				new Thread(this).start();
+			} else {
+				executorService.execute(this);
+			}
 		}
 
 		public void run() {
@@ -778,9 +768,9 @@ public class ClientComms {
 				// Reset an exception on existing delivery tokens.
 				// This will have been set if disconnect occurred before delivery was
 				// fully processed.
-				MqttDeliveryToken[] toks = tokenStore.getOutstandingDelTokens();
-				for (int i = 0; i < toks.length; i++) {
-					toks[i].internalTok.setException(null);
+				MqttToken[] toks = tokenStore.getOutstandingDelTokens();
+				for (MqttToken tok : toks) {
+					tok.internalTok.setException(null);
 				}
 
 				// Save the connect token in tokenStore as failure can occur before send
@@ -829,8 +819,12 @@ public class ClientComms {
 		}
 
 		void start() {
-			threadName = "MQTT Disc: " + getClient().getClientId();
-			executorService.execute(this);
+			threadName = "MQTT Disc: "+getClient().getClientId();
+			if (executorService == null) {
+				new Thread(this).start();
+			} else {
+				executorService.execute(this);
+			}
 		}
 
 		public void run() {
@@ -843,10 +837,19 @@ public class ClientComms {
 			clientState.quiesce(quiesceTimeout);
 			try {
 				internalSend(disconnect, token);
-				token.internalTok.waitUntilSent();
-			} catch (MqttException ex) {
-			} finally {
+				// do not wait if the sender process is not running
+				if (sender != null && sender.isRunning()) {
+					token.internalTok.waitUntilSent();
+				}
+			}
+			catch (MqttException ex) {
+			}
+			finally {
 				token.internalTok.markComplete(null, null);
+				if (sender == null || !sender.isRunning()) {
+					// if the sender process is not running 
+					token.internalTok.notifyComplete();
+				}
 				shutdownConnection(token, null, null);
 			}
 		}
@@ -932,7 +935,11 @@ public class ClientComms {
 			log.fine(CLASS_NAME, methodName, "509");
 
 			disconnectedMessageBuffer.setPublishCallback(new ReconnectDisconnectedBufferCallback(methodName));
-			executorService.execute(disconnectedMessageBuffer);
+			if (executorService == null) {
+				new Thread(disconnectedMessageBuffer).start();
+			} else {
+				executorService.execute(disconnectedMessageBuffer);
+			}
 		}
 	}
 
@@ -946,12 +953,6 @@ public class ClientComms {
 
 		public void publishBufferedMessage(BufferedMessage bufferedMessage) throws MqttException {
 			if (isConnected()) {
-				while (clientState.getActualInFlight() >= (mqttConnection.getReceiveMaximum() - 1)) {
-					// We need to Yield to the other threads to allow the in flight messages to
-					// clear
-					Thread.yield();
-
-				}
 				// @TRACE 510=Publising Buffered message message={0}
 				log.fine(CLASS_NAME, methodName, "510", new Object[] { bufferedMessage.getMessage().getKey() });
 				internalSend(bufferedMessage.getMessage(), bufferedMessage.getToken());
