@@ -1,14 +1,14 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2016 IBM Corp.
+ * Copyright (c) 2009, 2019 IBM Corp.
  *
  * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * are made available under the terms of the Eclipse Public License v2.0
  * and Eclipse Distribution License v1.0 which accompany this distribution. 
  *
  * The Eclipse Public License is available at 
- *    http://www.eclipse.org/legal/epl-v10.html
+ *    https://www.eclipse.org/legal/epl-2.0
  * and the Eclipse Distribution License is available at 
- *   http://www.eclipse.org/org/documents/edl-v10.php.
+ *   https://www.eclipse.org/org/documents/edl-v10.php
  *
  * Contributors:
  *    Dave Locke - initial API and implementation and/or initial documentation
@@ -23,13 +23,11 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
-import java.util.concurrent.Semaphore;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import org.eclipse.paho.mqttv5.client.IMqttMessageListener;
 import org.eclipse.paho.mqttv5.client.MqttActionListener;
 import org.eclipse.paho.mqttv5.client.MqttCallback;
-import org.eclipse.paho.mqttv5.client.MqttDeliveryToken;
 import org.eclipse.paho.mqttv5.client.MqttDisconnectResponse;
 import org.eclipse.paho.mqttv5.client.MqttToken;
 import org.eclipse.paho.mqttv5.client.logging.Logger;
@@ -53,7 +51,7 @@ import org.eclipse.paho.mqttv5.common.util.MqttTopicValidator;
  */
 public class CommsCallback implements Runnable {
 	private static final String CLASS_NAME = CommsCallback.class.getName();
-	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT, CLASS_NAME);
+	private Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT, CLASS_NAME);
 
 	private static final int INBOUND_QUEUE_SIZE = 10;
 	private MqttCallback mqttCallback;
@@ -65,17 +63,21 @@ public class CommsCallback implements Runnable {
 	private ClientComms clientComms;
 	private ArrayList<MqttPublish> messageQueue;
 	private ArrayList<MqttToken> completeQueue;
-	private boolean running = false;
-	private boolean quiescing = false;
-	private Object lifecycle = new Object();
+
+	private enum State {STOPPED, RUNNING, QUIESCING}
+
+	private State current_state = State.STOPPED;
+	private State target_state = State.STOPPED;	
+	private final Object lifecycle = new Object();
 	private Thread callbackThread;
-	private Object workAvailable = new Object();
-	private Object spaceAvailable = new Object();
+	private String threadName;
+	private Future<?> callbackFuture;
+	
+	private final Object workAvailable = new Object();
+	private final Object spaceAvailable = new Object();
 	private ClientState clientState;
 	private boolean manualAcks = false;
-	private String threadName;
-	private final Semaphore runningSemaphore = new Semaphore(1);
-	private Future<?> callbackFuture;
+
 
 	CommsCallback(ClientComms clientComms) {
 		this.clientComms = clientComms;
@@ -102,19 +104,24 @@ public class CommsCallback implements Runnable {
 	public void start(String threadName, ExecutorService executorService) {
 		this.threadName = threadName;
 		synchronized (lifecycle) {
-			if (!running) {
+			if (current_state == State.STOPPED) {
 				// Preparatory work before starting the background thread.
 				// For safety ensure any old events are cleared.
 				synchronized (workAvailable) {
 					messageQueue.clear();
 					completeQueue.clear();
 				}
-
-				running = true;
-				quiescing = false;
-				callbackFuture = executorService.submit(this);
+				target_state = State.RUNNING;
+				if (executorService == null) {
+					new Thread(this).start();
+				} else {
+					callbackFuture = executorService.submit(this);
+				}
 			}
 		}
+		while (!isRunning()) {
+			try { Thread.sleep(100); } catch (Exception e) { }
+		}			
 	}
 
 	/**
@@ -126,24 +133,24 @@ public class CommsCallback implements Runnable {
 			if (callbackFuture != null) {
 				callbackFuture.cancel(true);
 			}
-			if (running) {
-				// @TRACE 700=stopping
-				log.fine(CLASS_NAME, methodName, "700");
-				running = false;
-				if (!Thread.currentThread().equals(callbackThread)) {
-					try {
-						synchronized (workAvailable) {
-							// @TRACE 701=notify workAvailable and wait for run
-							// to finish
-							log.fine(CLASS_NAME, methodName, "701");
-							workAvailable.notifyAll();
-						}
-						// Wait for the thread to finish.
-						runningSemaphore.acquire();
-					} catch (InterruptedException ex) {
-					} finally {
-						runningSemaphore.release();
-					}
+		}
+		if (isRunning()) {
+			// @TRACE 700=stopping
+			log.fine(CLASS_NAME, methodName, "700");
+			synchronized (lifecycle) {
+				target_state = State.STOPPED;
+			}
+			if (!Thread.currentThread().equals(callbackThread)) {
+				synchronized (workAvailable) {
+					// @TRACE 701=notify workAvailable and wait for run
+					// to finish
+					log.fine(CLASS_NAME, methodName, "701");
+					workAvailable.notifyAll();
+				}
+				// Wait for the thread to finish.
+				while (isRunning()) {
+					try { Thread.sleep(100); } catch (Exception e) { }
+					clientState.notifyQueueLock();
 				}
 			}
 			callbackThread = null;
@@ -168,20 +175,18 @@ public class CommsCallback implements Runnable {
 		final String methodName = "run";
 		callbackThread = Thread.currentThread();
 		callbackThread.setName(threadName);
-
-		try {
-			runningSemaphore.acquire();
-		} catch (InterruptedException e) {
-			running = false;
-			return;
+		
+		synchronized (lifecycle) {
+			current_state = State.RUNNING;
 		}
 
-		while (running) {
+		while (isRunning()) {
 			try {
 				// If no work is currently available, then wait until there is some...
 				try {
 					synchronized (workAvailable) {
-						if (running && messageQueue.isEmpty() && completeQueue.isEmpty()) {
+						if (isRunning() && messageQueue.isEmpty()
+								&& completeQueue.isEmpty()) {
 							// @TRACE 704=wait for workAvailable
 							log.fine(CLASS_NAME, methodName, "704");
 							workAvailable.wait();
@@ -190,7 +195,7 @@ public class CommsCallback implements Runnable {
 				} catch (InterruptedException e) {
 				}
 
-				if (running) {
+				if (isRunning()) {
 					// Check for deliveryComplete callbacks...
 					MqttToken token = null;
 					synchronized (workAvailable) {
@@ -220,7 +225,7 @@ public class CommsCallback implements Runnable {
 					}
 				}
 
-				if (quiescing) {
+				if (isQuiescing()) {
 					clientState.checkQuiesceLock();
 				}
 
@@ -229,13 +234,13 @@ public class CommsCallback implements Runnable {
 				// of class NoClassDefFoundError
 				// @TRACE 714=callback threw exception
 				log.fine(CLASS_NAME, methodName, "714", null, ex);
-				running = false;
+
 				clientComms.shutdownConnection(null, new MqttException(ex), null);
 			} finally {
-				runningSemaphore.release();
-				synchronized (spaceAvailable) {
-					// Notify the spaceAvailable lock, to say that there's now
-					// some space on the queue...
+
+			    synchronized (spaceAvailable) {
+                    // Notify the spaceAvailable lock, to say that there's now
+                    // some space on the queue...
 
 					// @TRACE 706=notify spaceAvailable
 					log.fine(CLASS_NAME, methodName, "706");
@@ -243,6 +248,10 @@ public class CommsCallback implements Runnable {
 				}
 			}
 		}
+		synchronized (lifecycle) {
+			current_state = State.STOPPED;
+		}
+		callbackThread = null;
 	}
 
 	private void handleActionComplete(MqttToken token) throws MqttException {
@@ -263,9 +272,9 @@ public class CommsCallback implements Runnable {
 			if (!token.internalTok.isNotified()) {
 				// If a callback is registered and delivery has finished
 				// call delivery complete callback.
-				if (mqttCallback != null && token instanceof MqttDeliveryToken && token.isComplete()) {
+				if (mqttCallback != null && token.internalTok.isDeliveryToken() == true && token.isComplete()) {
 					try {
-						mqttCallback.deliveryComplete((MqttDeliveryToken) token);
+						mqttCallback.deliveryComplete(token);
 					} catch (Throwable ex) {
 						// Just log the fact that an exception was thrown
 						// @TRACE 726=Ignoring Exception thrown from deliveryComplete {0}
@@ -278,7 +287,7 @@ public class CommsCallback implements Runnable {
 
 			// Set notified so we don't tell the user again about this action.
 			if (token.isComplete()) {
-				if (token instanceof MqttDeliveryToken || token.getActionCallback() instanceof MqttActionListener) {
+				if (token.internalTok.isDeliveryToken() == true || token.getActionCallback() instanceof MqttActionListener) {
 					token.internalTok.setNotified(true);
 				}
 			}
@@ -371,7 +380,7 @@ public class CommsCallback implements Runnable {
 			// the client protect itself from getting flooded by messages
 			// from the server.
 			synchronized (spaceAvailable) {
-				while (running && !quiescing && messageQueue.size() >= INBOUND_QUEUE_SIZE) {
+				while (isRunning() && !isQuiescing() && messageQueue.size() >= INBOUND_QUEUE_SIZE) {
 					try {
 						// @TRACE 709=wait for spaceAvailable
 						log.fine(CLASS_NAME, methodName, "709");
@@ -380,7 +389,7 @@ public class CommsCallback implements Runnable {
 					}
 				}
 			}
-			if (!quiescing) {
+			if (!isQuiescing()) {
 				// Notify the CommsCallback thread that there's work to do...
 				synchronized (workAvailable) {
 					messageQueue.add(sendMessage);
@@ -440,7 +449,10 @@ public class CommsCallback implements Runnable {
 	 */
 	public void quiesce() {
 		final String methodName = "quiesce";
-		this.quiescing = true;
+		synchronized (lifecycle) {
+			if (current_state == State.RUNNING)
+			current_state = State.QUIESCING;
+		}
 		synchronized (spaceAvailable) {
 			// @TRACE 711=quiesce notify spaceAvailable
 			log.fine(CLASS_NAME, methodName, "711");
@@ -456,7 +468,7 @@ public class CommsCallback implements Runnable {
 	}
 
 	public boolean isQuiesced() {
-		return (quiescing && areQueuesEmpty());
+		return (isQuiescing() && areQueuesEmpty());
 	}
 
 	private void handleMessage(MqttPublish publishMessage) throws Exception {
@@ -465,7 +477,7 @@ public class CommsCallback implements Runnable {
 		String destName = publishMessage.getTopicName();
 
 		// @TRACE 713=call messageArrived key={0} topic={1}
-		log.fine(CLASS_NAME, methodName, "713", new Object[] { new Integer(publishMessage.getMessageId()), destName });
+		log.fine(CLASS_NAME, methodName, "713", new Object[] { Integer.valueOf(publishMessage.getMessageId()), destName });
 		deliverMessage(destName, publishMessage.getMessageId(), publishMessage.getMessage());
 
 		// If we are not in manual ACK mode:
@@ -494,7 +506,7 @@ public class CommsCallback implements Runnable {
 	public void asyncOperationComplete(MqttToken token) {
 		final String methodName = "asyncOperationComplete";
 
-		if (running) {
+		if (isRunning()) {
 			// invoke callbacks on callback thread
 			synchronized (workAvailable) {
 				completeQueue.add(token);
@@ -638,4 +650,21 @@ public class CommsCallback implements Runnable {
 		return (this.subscriptionIdMap.containsKey(subscriptionIdentifier));
 	}
 
+	public boolean isRunning() {
+		boolean result;
+		synchronized (lifecycle) {
+			result = ((current_state == State.RUNNING || current_state == State.QUIESCING)
+					&& target_state == State.RUNNING);
+		}
+		return result;
+	}
+	
+	public boolean isQuiescing() {
+		boolean result;
+		synchronized (lifecycle) {
+			result = (current_state == State.QUIESCING);
+		}
+		return result;
+	}
+	
 }
